tests/ui/unrecognized-repr.stderr
error: unrecognized repr on struct that implements RefCast
 --> tests/ui/unrecognized-repr.rs:4:19
  |
3 | #[derive(RefCast)]
  |          ------- in this derive macro expansion
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                   ^^^^^
  |
  = note: this error originates in the derive macro `RefCast` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unrecognized repr on struct that implements RefCast
 --> tests/ui/unrecognized-repr.rs:4:26
  |
3 | #[derive(RefCast)]
  |          ------- in this derive macro expansion
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                          ^^^^^^^^
  |
  = note: this error originates in the derive macro `RefCast` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unrecognized repr on struct that implements RefCast
 --> tests/ui/unrecognized-repr.rs:4:36
  |
3 | #[derive(RefCast)]
  |          ------- in this derive macro expansion
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                    ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `RefCast` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0552]: invalid representation hint: `usize` does not take a parenthesized argument list
 --> tests/ui/unrecognized-repr.rs:4:26
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                          ^^^^^^^^

error[E0552]: invalid representation hint: `usize` does not take a value
 --> tests/ui/unrecognized-repr.rs:4:36
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                    ^^^^^^^^^^^

error[E0517]: attribute should be applied to an enum
 --> tests/ui/unrecognized-repr.rs:4:19
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                     ^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0517]: attribute should be applied to an enum
 --> tests/ui/unrecognized-repr.rs:4:26
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                            ^^^^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0517]: attribute should be applied to an enum
 --> tests/ui/unrecognized-repr.rs:4:36
  |
4 |   #[repr(packed, C, usize, usize(0), usize = "0")]
  |                                      ^^^^^^^^^^^
5 | / struct Test {
6 | |     s: String,
7 | | }
  | |_- not an enum

error[E0566]: conflicting representation hints
 --> tests/ui/unrecognized-repr.rs:4:8
  |
4 | #[repr(packed, C, usize, usize(0), usize = "0")]
  |        ^^^^^^  ^  ^^^^^  ^^^^^^^^  ^^^^^^^^^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
  = note: `#[deny(conflicting_repr_hints)]` on by default
